This is the website using a different theme

--- a/public/de/404.html
+++ b/public/de/404.html
@@ -3,21 +3,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="icon" href="/favicon.svg">
-  
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BWNTC3FYDX"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-BWNTC3FYDX', { 'anonymize_ip': false });
-}
-</script>
+  <link rel="icon" href="/favicon.ico">
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9393340237023629"
-     crossorigin="anonymous"></script>
   <title>
     404 Page not found - Blist (mehrsprachig)
   </title>
@@ -157,7 +144,7 @@ if (!doNotTrack) {
     </main><footer class="container p-6 mx-auto flex justify-between items-center">
   <span class="text-sm font-light">
     
-    Copyright © 2021 - Kojo Nimako · All rights reserved
+    Copyright © 2022 - Mate · All rights reserved
     
   </span>
   <span onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-1 cursor-pointer">
