--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
   <head>
-  <title>404 page not found | Newsroom</title>
+  <title>404 page not found | Mate</title>
   <meta charset='utf-8'>
   <meta name="viewport" content ="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 
-<meta name="keywords" content="Newsroom">
+<meta name="keywords" content="Mate">
 <meta property="og:locale" content='en_US'>
 <meta property="og:type" content="article">
 <meta property="og:title" content="404 Page not found">
@@ -35,7 +35,7 @@
 </div>
 <header class="nav">
   <nav class="nav-menu">
-    <a href="https://mate-111.web.app/" class="nav-brand nav_item">Newsroom</a>
+    <a href="https://mate-111.web.app/" class="nav-brand nav_item">Mate</a>
     <div class="nav_bar-wrap">
       <div class="nav_bar"></div>
     </div>
@@ -53,7 +53,7 @@
 
     </main>
     <footer class="footer wrap pale">
-  <p>&copy;&nbsp;<span class="year"></span>&nbsp;Newsroom</p>
+  <p>&copy;&nbsp;<span class="year"></span>&nbsp;Mate</p>
   <p class="attribution upcase">Designed by  <a href = '<no value>' target = '_blank' title = 'Linkedin Profile' rel = 'nonopener'><no value></a></p>
 </footer>
 
