--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@ if (!doNotTrack) {
     
   <article class = 'article mb-2'>
     <a href = 'https://mate-111.web.app/post/balancedblackman/'  class = 'grid-reverse' >
-      <div class = 'article_thumb' style='background-image: url(https://mate-111.web.app/images/artist.jpg)'></div>
+      <div class = 'article_thumb' style='background-image: url(https://mate-111.web.app/images/osramNeNsoromma.png)'></div>
       <div class = 'article_meta  center_y '>
         <time class = 'post_date'>March 05, 2019</time>
         <h3 class = 'article_title'>Books for Balanced Black Men</h3>
