added more content

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@ if (!doNotTrack) {
   <div class="nav-body">
       <a href="https://mate-111.web.app/about/" class="nav_item">About</a>
       <a href="https://mate-111.web.app/" class="nav_item">Blog</a>
+      <a href="https://nonamebooks.com/Bookstores" class="nav_item">Black Bookstores</a>
     <div class="nav-close"></div><div class="color_mode">
 <label for="mode">Toggle Dark Mode</label>
 <input type="checkbox" class="color_choice" id="mode">
